syntax = "proto3";
import "google/api/annotations.proto";
option csharp_namespace = "HealthCare.Documents.Api.Protos";

package DocumentSearch;
// Document Service
service DocumentService {
    // Gets all documents
  rpc GetAll (PatientId) returns (DocumentList){
    option (google.api.http) = {
      get: "/v1/documents/{patientId}",
      body: "*"
    };
  }
  // Gets a document
  rpc Get (DocumentId) returns (Document) {
    option (google.api.http) = {
      get: "/v1/documents/{id}",
      body: "*"
    };
  }
  // inserts a document
  rpc Insert (Document) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/documents",
      body: "*"
    };
  }
  // Updates a document
  rpc Update (Document) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/documents",
      body: "*"
    };
  }
  // Deletes a document
  rpc Delete (DocumentId) returns (Empty) {
    option (google.api.http) = {
      delete: "/v1/documents/{id}",
      body: "*"
    };
  
  }
}

message Empty{}
// Document Model
message Document {
  string id = 1;
  string patientId = 2;
  string name = 3;
  string path = 4;
}

message AddDocument {
  string patientId = 2;
  string name = 3;
  string path = 4;
}

message DocumentList{
    repeated Document documents = 1; 
}

message DocumentId {
  string id = 1;
}

message PatientId {
  string patientId = 1;
}